# frappe-microsoft-sync

./: README.md  package.json  pyproject.toml
frappe_microsoft_sync/: __init__.py  api.py  hooks.py  microsoft_graph.py  modules.txt  patches.txt  sync.py
frappe_microsoft_sync/frappe_microsoft_sync/doctype/ms_sync_settings/: ms_sync_settings.json
frappe_microsoft_sync/frappe_microsoft_sync/fixtures/: custom_field.json
frappe_microsoft_sync/frappe_microsoft_sync/module_def/frappe_microsoft_sync/: frappe_microsoft_sync.json
frappe_microsoft_sync/frappe_microsoft_sync/patches/v0_1/: setup_microsoft_sso.py
mimirio_sync/: __init__.py  api.py  hooks.py  microsoft_graph.py  modules.txt  patches.txt  sync.py
mimirio_sync/mimirio_sync/doctype/ms_sync_settings/: ms_sync_settings.json  ms_sync_settings.py
mimirio_sync/mimirio_sync/fixtures/: custom_field.json
mimirio_sync/mimirio_sync/module_def/mimirio_sync/: mimirio_sync.json
